[package]
name = "wow-influxdb"
version = "0.1.0"
edition = "2021"
authors = ["Nathan Adams <dinnerbone@dinnerbone.com>"]
description = "Utility to fetch World of Warcraft auction house prices and put them into an influxdb bucket"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
influxdb2 = { git = "https://github.com/aprimadi/influxdb2" }
influxdb2-structmap = { git = "https://github.com/aprimadi/influxdb2" }
num-traits = "0.2"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
oauth2 = "4.2.3"
futures = "0.3.23"
csv = "1.1"
figment = { version = "0.10", features = ["toml", "env"] }
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"